--- a/api/.gitattributes
+++ b/api/.gitattributes
@@ -1,1 +1,2 @@
-movie_10_100/x.safetensors filter=lfs diff=lfs merge=lfs -text
+model.safetensors filter=lfs diff=lfs merge=lfs -text
+api/movie_10_100/model.safetensors filter=lfs diff=lfs merge=lfs -text
