--- a/api/fly.toml
+++ b/api/fly.toml
@@ -16,7 +16,5 @@ primary_region = 'lax'
   min_machines_running = 0
   processes = ['app']
 
-[[vm]]
-  memory = '2gb'
-  cpu_kind = 'shared'
-  cpus = 1
+vm.size = "a100-40gb"
+
