--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -21,4 +21,4 @@ WORKDIR /app
 # Copy the rest of the app files into the container
 COPY . .
 
-CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "8000", "--log-level", "debug"]
