--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -20,5 +20,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the rest of the app files into the container
 COPY . .
 
+EXPOSE 8080
+
 # Command to run the application
-CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "8000", "--log-level", "debug"]
+CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "8080", "--log-level", "debug"]
