--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,10 +1,6 @@
 # Use a Python 3.9 base image
 FROM python:3.9-slim
 
-# Environment variables to ensure clean execution
-ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1
-
 # Install system dependencies for OpenCV and other libraries
 RUN apt-get update && apt-get install -y \
     python3-pip \
@@ -17,8 +13,9 @@ WORKDIR /app
 # Copy the requirements file into the container
 COPY requirements.txt ./
 
-# Install dependencies, including the CPU-only version of PyTorch
-RUN pip install --no-cache-dir -r requirements.txt
+# Install CPU-only PyTorch
+RUN pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the app files into the container
 COPY . .
