--- a/api/.gitattributes
+++ b/api/.gitattributes
@@ -1,2 +1,2 @@
 model.safetensors filter=lfs diff=lfs merge=lfs -text
-api/movie_10_100/model.safetensors filter=lfs diff=lfs merge=lfs -text
+Movies_latest/model.safetensors filter=lfs diff=lfs merge=lfs -text
