--- a/api/Movies_latest/config.json
+++ b/api/Movies_latest/config.json
@@ -1,5 +1,5 @@
 {
-  "_name_or_path": "gpt2-medium",
+  "_name_or_path": "./gpt2-finetuned-movie-dialog",
   "activation_function": "gelu_new",
   "architectures": [
     "GPT2LMHeadModel"
