--- a/api/Movies_latest/tokenizer_config.json
+++ b/api/Movies_latest/tokenizer_config.json
@@ -13,7 +13,12 @@
   "bos_token": "<|endoftext|>",
   "clean_up_tokenization_spaces": true,
   "eos_token": "<|endoftext|>",
+  "max_length": 100,
   "model_max_length": 1024,
+  "pad_token": "<|endoftext|>",
+  "stride": 0,
   "tokenizer_class": "GPT2Tokenizer",
+  "truncation_side": "right",
+  "truncation_strategy": "longest_first",
   "unk_token": "<|endoftext|>"
 }
